--- a/Polish_presidential_election_2030_turnout_prediction_model_plus_visualization/requirements.txt
+++ b/Polish_presidential_election_2030_turnout_prediction_model_plus_visualization/requirements.txt
@@ -1,4 +1,5 @@
-Modules: 
+Modules:
+
 pandas
 numpy
 seaborn
@@ -6,6 +7,14 @@ matplotlib.pyplot
 pmdarima
 joblib
 functools
+warnings
+xgboost
+scikit-learn
+folium
+geopandas
+
+Engines:
+
 pyarrow
 fastparquet
-warnings
+
